remove -a and env var definitions

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -144,21 +144,10 @@ jobs:
       - name: Set URL matrix
         id: set-matrix
         run: |
-          python3 scripts/mobility-database-harvester/harvest_latest_versions.py -d datasets_metadata -a gtfs_archives_ids.json -l latest_versions.json
+          python3 scripts/mobility-database-harvester/harvest_latest_versions.py -d datasets_metadata -l latest_versions.json
           DATASETS=$(jq . datasets_metadata/latest_versions.json -c)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
-        env:
-          MD_TYPE: ${{ secrets.MD_TYPE }}
-          MD_PROJECT_ID: ${{ secrets.MD_PROJECT_ID }}
-          MD_PRIVATE_KEY_ID: ${{ secrets.MD_PRIVATE_KEY_ID }}
-          MD_PRIVATE_KEY: ${{ secrets.MD_PRIVATE_KEY }}
-          MD_CLIENT_EMAIL: ${{ secrets.MD_CLIENT_EMAIL }}
-          MD_CLIENT_ID: ${{ secrets.MD_CLIENT_ID }}
-          MD_AUTH_URI: ${{ secrets.MD_AUTH_URI }}
-          MD_TOKEN_URI: ${{ secrets.MD_TOKEN_URI }}
-          MD_AUTH_PROVIDER_X509_CERT_URL: ${{ secrets.MD_AUTH_PROVIDER_X509_CERT_URL }}
-          MD_CLIENT_X509_CERT_URL: ${{ secrets.MD_CLIENT_X509_CERT_URL }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
   get-reports:
