--- a/.github/workflows/v2_evaluation.yml
+++ b/.github/workflows/v2_evaluation.yml
@@ -142,8 +142,8 @@ jobs:
       - name: Set URL matrix
         id: set-matrix
         run: |
-          python3 scripts/mobility-database-harvester/harvest_latest_versions.py -d datasets_metadata -a gtfs_archives_ids.json -l latest_versions.json
-          DATASETS=$(jq . datasets_metadata/latest_versions.json -c)
+          python3 scripts/mobility-database-harvester/harvest_latest_versions.py -d scripts/mobility-database-harvester/datasets_metadata -l gtfs_latest_versions.json -o gtfs_older_versions.json
+          DATASETS=$(jq . scripts/mobility-database-harvester/datasets_metadata/latest_versions.json -c)
           echo $DATASETS
           echo "::set-output name=matrix::$DATASETS"
         env:
