--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -202,6 +202,7 @@ jobs:
     needs: [ get-reports ]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Download comparator .jar file from previous job
         uses: actions/download-artifact@v2
         with:
@@ -210,10 +211,13 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: reports_all
+      - name: Retrieve gtfs latest versions from previous job
+        uses: actions/download-artifact@v2
+        with:
+          name: datasets_metadata
       - name: Generate acceptance report test
         run: |
-          ls
-          java -jar output-comparator*.jar --report_directory . --new_error_threshold 1 --reference_report_name reference.json --latest_report_name latest.json --percent_invalid_datasets_threshold 1 --output_base ${{ github.sha }}/acceptance-test-output --source_urls scripts/mobility-database-harvester/datasets_metadata/gtfs_latest_versions.json
+          java -jar output-comparator*.jar --report_directory . --new_error_threshold 1 --reference_report_name reference.json --latest_report_name latest.json --percent_invalid_datasets_threshold 1 --output_base ${{ github.sha }}/acceptance-test-output --source_urls gtfs_latest_versions.json
       - name: Persist acceptance test report
         if: always()
         uses: actions/upload-artifact@v2
