--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -215,9 +215,15 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: datasets_metadata
+      - name: Explore folders
+        run: |
+          ls -a
       - name: Generate acceptance report test
         run: |
-          java -jar output-comparator*.jar --report_directory . --new_error_threshold 1 --reference_report_name reference.json --latest_report_name latest.json --percent_invalid_datasets_threshold 1 --output_base ${{ github.sha }}/acceptance-test-output --source_urls gtfs_latest_versions.json
+          java -jar output-comparator*.jar --report_directory output --new_error_threshold 1 --reference_report_name reference.json --latest_report_name latest.json --percent_invalid_datasets_threshold 1 --output_base ${{ github.sha }}/acceptance-test-output --source_urls gtfs_latest_versions.json
+      - name: Explore folders (2)
+        run: |
+          ls -a
       - name: Persist acceptance test report
         if: always()
         uses: actions/upload-artifact@v2
