--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -247,5 +247,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "${needs.compare-outputs.outputs.pr_comment}"
+              body: "${needs.compare-outputs.outputs.comment}"
             })
