--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -186,12 +186,10 @@ jobs:
         with:
           name: reports_all
           path: ${{ github.sha }}/output
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@master
+      - name: Set up and authorize Cloud
+        uses: google-github-actions/auth@v0
         with:
-          project_id: ${{ secrets.VALIDATOR_PROJECT_ID }}
-          service_account_key: ${{ secrets.VALIDATOR_SA_KEY }}
-          export_default_credentials: true
+          credentials_json: ${{ secrets.VALIDATOR_SA_KEY }}
       - name: Upload reports to Google Cloud Storage
         id: upload-files
         uses: google-github-actions/upload-cloud-storage@main
