--- a/build.gradle
+++ b/build.gradle
@@ -26,17 +26,7 @@ buildscript {
 
 plugins {
     id 'java'
-    //
-    // FIXME: find a way to fix validation.
-    //
-    // Format validator fails this auto-generated file, even after it has been
-    // filtered by google-java-format-1.13.0-all-deps.jar code formatter:
-    //
-    //   ./main/src/main/java/org/mobilitydata/gtfsvalidator/viewer/ViewerAssets.java
-    //
-    // Disabled until it can be fixed.
-    //
-    // id 'com.github.sherter.google-java-format' version '0.9'
+    id 'com.github.sherter.google-java-format' version '0.9'
 }
 
 repositories {
@@ -87,7 +77,7 @@ class FileToLiteralString {
             if (i++ == 0) {
                 out.print "    return " + FileToLiteralString.escapeString(line)
             } else {
-                out.print "\n       + " + FileToLiteralString.escapeString(line)
+                out.print "\n        + " + FileToLiteralString.escapeString(line)
             }
         }
         out.println ";"
