--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,28 @@ plugins {
     id "com.diffplug.spotless" version "6.2.0"
 }
 
+spotless {
+  // Copied and modified from the readme at
+  // https://github.com/diffplug/spotless/tree/main/plugin-gradle#google-java-format
+
+  format 'misc', {
+    // define the files to apply `misc` to
+    // target '*.gradle', '*.md', '.gitignore'
+    target '*.gradle', '.gitignore'
+
+    // define the steps to apply to those files
+    trimTrailingWhitespace()
+    indentWithSpaces(2) // or spaces. Takes an integer argument if you don't like 4
+    endWithNewline()
+  }
+  java {
+    // don't need to set target, it is inferred from java
+
+    // apply a specific flavor of google-java-format
+    googleJavaFormat('1.8').aosp().reflowLongStrings()
+  }
+}
+
 repositories {
     mavenCentral()
 }
