--- a/main/build.gradle
+++ b/main/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation 'com.google.flogger:flogger-system-backend:0.6'
     implementation 'com.univocity:univocity-parsers:2.9.0'
     implementation 'com.google.geometry:s2-geometry:2.0.0'
+    implementation 'com.sparkjava:spark-core:2.9.3' // Spark web framework.
+
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
