newer google java format, use default settings

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ spotless {
     // don't need to set target, it is inferred from java
 
     // apply a specific flavor of google-java-format
-    googleJavaFormat('1.8').aosp().reflowLongStrings()
+    googleJavaFormat('1.13.0')
   }
 }
 
