--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'uk.org.webcompere:system-stubs-core:2.0.0'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation group: 'junit', name: 'junit', version: '4.9'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
 jar {
