--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.github.stefanbirkner:system-lambda:1.2.0'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation group: 'junit', name: 'junit', version: '4.9'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
 jar {
