--- a/main/build.gradle
+++ b/main/build.gradle
@@ -122,13 +122,7 @@ task rollupSnabbdomUjs(type: Exec) {
 
   workingDir "$projectDir/js/snabbdom-umd"
   executable './node_modules/.bin/rollup'
-  args './node_modules/snabbdom/build/index.js', '--format', 'umd', '--name', 'snabbdom', '--file', './build/snabbdom.browser.js'
-}
-
-task copySnabbdomUjs(type: Copy) {
-  dependsOn rollupSnabbdomUjs
-  from rollupSnabbdomUjs
-  into "$projectDir/src/main/java/org/mobilitydata/gtfsvalidator/viewer/"
+  args './node_modules/snabbdom/build/index.js', '--format', 'umd', '--name', 'snabbdom', '--file', "$viewerDir" + "/snabbdom.browser.js"
 }
 
 // Utility class for generateViewerAssets task.
@@ -158,7 +152,7 @@ class FileToLiteralString {
 }
 
 task generateViewerAssets {
-    dependsOn copySnabbdomUjs
+    dependsOn rollupSnabbdomUjs
 
     outputs.file "$viewerDir/ViewerAssets.java"
     inputs.file "$viewerDir/index.css"
