--- a/main/build.gradle
+++ b/main/build.gradle
@@ -115,7 +115,7 @@ task installSnabbdom(type: Exec) {
   args 'install'
 }
 
-task rollupSnabbdomUjs(type: Exec) {
+task rollupSnabbdomUmd(type: Exec) {
   dependsOn installSnabbdom
   inputs.file "$projectDir/js/snabbdom-umd/package.json"
   outputs.file "$projectDir/js/snabbdom-umd/build/snabbdom.browser.js"
@@ -152,7 +152,7 @@ class FileToLiteralString {
 }
 
 task generateViewerAssets {
-    dependsOn rollupSnabbdomUjs
+    dependsOn rollupSnabbdomUmd
 
     outputs.file "$viewerDir/ViewerAssets.java"
     inputs.file "$viewerDir/index.css"
