--- a/main/build.gradle
+++ b/main/build.gradle
@@ -108,7 +108,7 @@ ext {
 
 task installSnabbdom(type: Exec) {
   inputs.file "$projectDir/js/snabbdom-umd/package.json"
-  outputs.dir "$projectDir/js/snabbdom-umd/build"
+  outputs.dir "$projectDir/js/snabbdom-umd/node_modules"
 
   workingDir "$projectDir/js/snabbdom-umd"
   executable 'npm'
@@ -118,11 +118,12 @@ task installSnabbdom(type: Exec) {
 task rollupSnabbdomUmd(type: Exec) {
   dependsOn installSnabbdom
   inputs.file "$projectDir/js/snabbdom-umd/package.json"
-  outputs.file "$projectDir/js/snabbdom-umd/build/snabbdom.browser.js"
+  inputs.dir "$projectDir/js/snabbdom-umd/node_modules"
+  outputs.file "$viewerDir/snabbdom.browser.js"
 
   workingDir "$projectDir/js/snabbdom-umd"
   executable './node_modules/.bin/rollup'
-  args './node_modules/snabbdom/build/index.js', '--format', 'umd', '--name', 'snabbdom', '--file', "$viewerDir" + "/snabbdom.browser.js"
+  args './node_modules/snabbdom/build/index.js', '--format', 'umd', '--name', 'snabbdom', '--file', "$viewerDir/snabbdom.browser.js"
 }
 
 // Utility class for generateViewerAssets task.
