--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -2,7 +2,31 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'java'
     id 'application'
+    id "com.diffplug.spotless" // Version provided in ../build.gradle.
 }
+
+spotless {
+  // Copied and modified from the readme at
+  // https://github.com/diffplug/spotless/tree/main/plugin-gradle#google-java-format
+
+  format 'misc', {
+    // define the files to apply `misc` to
+    // target '*.gradle', '*.md', '.gitignore'
+    target '*.gradle', '.gitignore'
+
+    // define the steps to apply to those files
+    trimTrailingWhitespace()
+    indentWithSpaces(2) // or spaces. Takes an integer argument if you don't like 4
+    endWithNewline()
+  }
+  java {
+    // don't need to set target, it is inferred from java
+
+    // apply a specific flavor of google-java-format
+    googleJavaFormat('1.13.0')
+  }
+}
+
 
 group 'org.mobilitydata'
 version "${System.getenv("versionTag")}_cli"
@@ -55,4 +79,3 @@ shadowJar {
 
 mainClassName = 'org.mobilitydata.gtfsvalidator.outputcomparator.cli.Main'
 compileJava.options.encoding = "UTF-8"
-
