--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -52,18 +52,18 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
-      - name: Run Java tests
+      - name: Run tests on Java ${{ matrix.java_version }}
         uses: eskatos/gradle-command-action@v1
         env:
           versionTag: ${{ steps.prep.outputs.versionTag }}
         with:
           arguments: testReport
-      - name: Persist **Passing** Java tests merged report
+      - name: Persist **Passing** Java  ${{ matrix.java_version }} tests merged report
         uses: actions/upload-artifact@v2
         with:
           name: Test report - Java ${{ matrix.java_version }}-- ${{ steps.prep.outputs.versionTag }}
           path: build/reports/allTests/
-      - name: Persist **Failing** Java tests unmerged reports
+      - name: Persist **Failing** Java  ${{ matrix.java_version }} tests unmerged reports
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
@@ -76,6 +76,9 @@ jobs:
   pack:
     needs: [test]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java_version: [ 11, 17 ]
     steps:
       - uses: actions/checkout@v1
       - name: Prepare version name
@@ -93,10 +96,10 @@ jobs:
             VERSION_TAG=v${VERSION_TAG}-sha-${GITHUB_SHA::8}-SNAPSHOT
           fi
           echo ::set-output name=versionTag::${VERSION_TAG}
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ matrix.java_version }}
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: ${{ matrix.java_version }}
           distribution: 'adopt'
       - name: Cache Gradle packages
         uses: actions/cache@v2
@@ -113,11 +116,14 @@ jobs:
       - name: Persist cli app jar
         uses: actions/upload-artifact@v2
         with:
-          name: Application - cli executable .jar -- ${{ steps.prep.outputs.versionTag }}
+          name: Application - cli executable - Java ${{ matrix.java_version }}.jar -- ${{ steps.prep.outputs.versionTag }}
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   doc:
     needs: [test]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java_version: [ 11, 17 ]
     steps:
       - uses: actions/checkout@v1
       - name: Prepare version name
@@ -135,10 +141,10 @@ jobs:
             VERSION_TAG=v${VERSION_TAG}-sha-${GITHUB_SHA::8}-SNAPSHOT
           fi
           echo ::set-output name=versionTag::${VERSION_TAG}
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ matrix.java_version }}
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: ${{ matrix.java_version }}
           distribution: 'adopt'
       - name: Cache Gradle packages
         uses: actions/cache@v2
@@ -155,6 +161,6 @@ jobs:
       - name: Persist javadoc
         uses: actions/upload-artifact@v2
         with:
-          name: Documentation - javadoc -- ${{ steps.prep.outputs.versionTag }}
+          name: Documentation - javadoc -- ${{ steps.prep.outputs.versionTag }} - Java ${{ matrix.java_version }}
           path: build/docs/javadoc/
 
