--- a/main/build.gradle
+++ b/main/build.gradle
@@ -18,6 +18,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'application'
     id 'java'
+    id 'maven-publish'
 }
 
 applicationDefaultJvmArgs = [ "-Xmx8G" ]
@@ -48,10 +49,6 @@ shadowJar {
     archiveClassifier = null
     // Add "v" to version to match previous releases
     archiveVersion = project.version
-}
-
-artifacts {
-    archives shadowJar
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
