one more repository

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -57,6 +57,7 @@ compileJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/libs-release' }
 }
 
 dependencies {
