--- a/main/build.gradle
+++ b/main/build.gradle
@@ -52,6 +52,7 @@ shadowJar {
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 mainClassName = 'org.mobilitydata.gtfsvalidator.cli.Main'
 compileJava.options.encoding = "UTF-8"
 
