--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -20,10 +20,11 @@ jobs:
       - uses: gradle/wrapper-validation-action@v1
   test:
     needs: [ validate_gradle_wrapper ]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java_version: [11, 17]
+        java_version: [ 11, 17 ]
+        os: [ ubuntu-latest, windows-latest, ubuntu-20.04 ]
     steps:
       - uses: actions/checkout@v1
       - name: Prepare version name
@@ -75,10 +76,11 @@ jobs:
 
   pack:
     needs: [test]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         java_version: [ 11, 17 ]
+        os: [ ubuntu-latest, windows-latest, ubuntu-20.04 ]
     steps:
       - uses: actions/checkout@v1
       - name: Prepare version name
@@ -120,10 +122,11 @@ jobs:
           path: main/build/libs/gtfs-validator-${{ steps.prep.outputs.versionTag }}_cli.jar
   doc:
     needs: [test]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         java_version: [ 11, 17 ]
+        os: [ ubuntu-latest, windows-latest, ubuntu-20.04 ]
     steps:
       - uses: actions/checkout@v1
       - name: Prepare version name
