--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -59,22 +59,22 @@ jobs:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
-      - name: Run tests on Java ${{ matrix.java_version }}
+      - name: Run tests on Java ${{ matrix.java_version }} and ${{ matrix.os }}
         uses: eskatos/gradle-command-action@v1
         env:
           versionTag: ${{ needs.prepare-version-name.outputs.versionTag }}
         with:
           arguments: testReport
-      - name: Persist **Passing** Java  ${{ matrix.java_version }} tests merged report
+      - name: Persist **Passing** tests merged report - Java ${{ matrix.java_version }} on ${{ matrix.os }}
         uses: actions/upload-artifact@v2
         with:
-          name: Test report - Java ${{ matrix.java_version }}-- ${{ needs.prepare-version-name.outputs.versionTag }}
+          name: Test report - ${{ needs.prepare-version-name.outputs.versionTag }} - Java ${{ matrix.java_version }} on ${{ matrix.os }}
           path: build/reports/allTests/
-      - name: Persist **Failing** Java  ${{ matrix.java_version }} tests unmerged reports
+      - name: Persist **Failing** tests unmerged reports - Java ${{ matrix.java_version }} on ${{ matrix.os }}
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
-          name: Test report - Java ${{ matrix.java_version }} -- ${{ needs.prepare-version-name.outputs.versionTag }}
+          name: Test report - ${{ needs.prepare-version-name.outputs.versionTag }} - Java ${{ matrix.java_version }} on ${{ matrix.os }}
           path: |
             core/build/reports/tests/
             main/build/reports/tests/
@@ -109,7 +109,7 @@ jobs:
       - name: Persist cli app jar
         uses: actions/upload-artifact@v2
         with:
-          name: Application - cli executable - Java ${{ matrix.java_version }}.jar -- ${{ needs.prepare-version-name.outputs.versionTag }}
+          name: Application - CLI executable - Java ${{ matrix.java_version }} JAR file -- ${{ needs.prepare-version-name.outputs.versionTag }} -- ${{ matrix.os }}
           path: main/build/libs/gtfs-validator-${{ needs.prepare-version-name.outputs.versionTag }}_cli.jar
   doc:
     needs: [test]
@@ -140,6 +140,5 @@ jobs:
       - name: Persist javadoc
         uses: actions/upload-artifact@v2
         with:
-          name: Documentation - javadoc -- ${{ needs.prepare-version-name.outputs.versionTag }} - Java ${{ matrix.java_version }}
+          name: Documentation - javadoc -- ${{ needs.prepare-version-name.outputs.versionTag }} - Java ${{ matrix.java_version }} - ${{ matrix.java_version }}
           path: build/docs/javadoc/
-
