--- a/main/build.gradle
+++ b/main/build.gradle
@@ -53,6 +53,7 @@ shadowJar {
 sourceCompatibility = JavaVersion.VERSION_11
 mainClassName = 'org.mobilitydata.gtfsvalidator.cli.Main'
 compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
