--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -117,7 +117,7 @@ jobs:
     strategy:
       matrix:
         java_version: [ 11, 17 ]
-        os: [ ubuntu-latest ubuntu-20.04 ]
+        os: [ ubuntu-latest, ubuntu-20.04 ]
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK ${{ matrix.java_version }}
