--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -160,8 +160,19 @@ jobs:
           path: scripts/mobility-database-harvester/datasets_metadata
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
+  secrets-gate:
+    runs-on: ubuntu-latest
+    outputs:
+      ok: ${{ steps.check-secrets.outputs.ok }}
+    steps:
+      - name: check for secrets needed to upload on GCP Cloud Storage
+        id: check-secrets
+        run: |
+          if [ ! -z "${{ secrets.VALIDATOR_SA_KEY }}" ]; then
+            echo "::set-output name=ok::true"
+          fi
   get-reports:
-    needs: [ fetch-urls, pack-master, pack-snapshot ]
+    needs: [ fetch-urls, pack-master, pack-snapshot, secrets-gate ]
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJson(needs.fetch-urls.outputs.matrix) }}
@@ -186,6 +197,18 @@ jobs:
         with:
           name: reports_all
           path: ${{ github.sha }}/output
+      - name: Set up and authorize Cloud
+        uses: google-github-actions/auth@v0
+        if: ${{ needs.secrets-gate.outputs.ok == 'true' }}
+        with:
+          credentials_json: ${{ secrets.VALIDATOR_SA_KEY }}
+      - name: Upload reports to Google Cloud Storage
+        id: upload-files
+        uses: google-github-actions/upload-cloud-storage@main
+        if:
+        with:
+          path: ${{ github.sha }}/output
+          destination: gtfs-validator-reports
   compare-outputs:
     needs: [ get-reports ]
     runs-on: ubuntu-latest
