--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -205,7 +205,7 @@ jobs:
       - name: Upload reports to Google Cloud Storage
         id: upload-files
         uses: google-github-actions/upload-cloud-storage@main
-        if:
+        if: ${{ needs.secrets-gate.outputs.ok == 'true' }}
         with:
           path: ${{ github.sha }}/output
           destination: gtfs-validator-reports
