Adds jQuery dependency to gradle file

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
+    implementation 'org.webjars:jquery:3.6.0'
 }
 
 test {
